--- a/custom/custom.css
+++ b/custom/custom.css
@@ -164,7 +164,7 @@ a.btn-other, a.btn-other:hover{
 
 .sidebar>h1 {
   margin-top: 1ch;
-  margin-bottom: -1.25ch;
+  margin-bottom: 0.5ch;
 }
 
 .sidebar>h1 img {
@@ -197,4 +197,7 @@ small > strong {
 .sidebar-nav ul li p{
   margin-block-start: 2ch;
   margin-block-end: 0ch;
+}
+.sidebar>h1 .app-name-link {
+  color: #ffffff !important;
 }
